# testtaskwithc

./: .gitignore  Readme.md
CppLib/: CMakeLists.txt
CppLib/include/: math.hpp
CppLib/src/: math.cpp
Web/: Program.cs  testtaskwithc.csproj  testtaskwithc.http  testtaskwithc.sln
Web/Controllers/: MathController.cs
Web/Interfaces/: IMathService.cs
Web/Properties/: launchSettings.json
Web/Services/: MathService.cs
